--- a/r.saladas.html
+++ b/r.saladas.html
@@ -1,28 +1,552 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="shortcut icon" href="img/favicon3.png" type="image/x-icon">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="shortcut icon" href="img/favicon3.png" type="image/x-icon">
 </head>
+
 <body>
-    <header>
-    </header>
+	<header>
+	</header>
+	<main>
+		<div class="Contenedor_01">
 
 
 
+			<!--------- INICIO -> SECCION 1------------->
+			<section id="Receta 1">
+
+				<!--------- INICIO -> DIV GENERAL de la section 1------------->
 
 
 
+				<!--------- 1º DIV  ------------->
 
-    
-    
-    <footer>
-    </footer>
+				<div class="salada_01">
 
-    <script src="./js/index.js"></script>
+					<h1>MILANESA A LA NAPOLITANA</h1>
+
+					<!-- Imagen Receta 1 -->
+
+					<img src="img/Milanesa_Napo.jpg" alt="Milanesa NAPOLITANA" width="200px" height="auto">
+					<hr>
+
+				</div>
+
+				<!--------- FIN 1º DIV  ------------->
+
+				<!--------- 2º DIV  ------------->
+
+				<div class="salada_02">
+
+					<h2>INGREDIENTES</h2>
+					<hr>
+					<hr>
+
+					<ul>
+						<li>4 Huevos</li>
+						<li>200 gr. de jamón cocido</li>
+						<li>2 dientes de ajo</li>
+						<li>Sal y pimienta, a gusto</li>
+						<li>Perejil picado, a gusto</li>
+						<li>500 gr. de mozzarella</li>
+						<li>Pan rallado, cantidad necesaria</li>
+						<li>1/2 litro de salsa de tomate</li>
+						<li>1 Kilo de nalga para milanesa</li>
+						<li>Aceite para freír</li>
+					</ul>
+					<hr>
+
+				</div>
+
+				<!--------- FIN 2º DIV  ------------->
+
+				<!--------- 3º DIV  ------------->
+
+				<div class="salada_03">
+
+					<h2>PREPARACIÓN</h2>
+
+					<ul>
+						<li>
+							<h3>Paso 1</h3>
+							<p>Pelar los ajos y picar junto con el perejil.</p>
+						</li>
+
+						<li>
+							<h3>Paso 2</h3>
+							<p>Colocar los huevos en un bowl y batir hasta disolverlos bien. Luego agregar el perejil,
+								los ajos y condimentar con sal y pimienta.</p>
+						</li>
+
+						<li>
+							<h3>Paso 3</h3>
+							<P>Colocar la carne en la mezcla anterior, dejar unos minutos, retirar y pasar por pan
+								rallado.</p>
+						</li>
+
+						<li>
+							<h3>Paso 4</h3>
+							<p>En una sartén con abundante aceite caliente freír las milanesas. Retirar y escurrir en
+								papel absorbente.</p>
+						</li>
+
+						<li>
+							<h3>Paso 5</h3>
+							<p>Acomodar las milanesas en una placa para horno, bañar con salsa de tomate, encima el
+								jamón cocido y por ultimo la mozzarella.</p>
+
+						</li>
+
+						<li>
+							<h3>Paso 6</h3>
+							<p>Cocinar en horno bien caliente hasta gratinar la mozzarella.</p>
+						</li>
+					</ul>
+					<hr>
+
+
+
+					<!--------- FIN 3º DIV  ------------->
+
+
+
+					<!--------- FIN -> DIV GENERAL de la section 1------------->
+
+			</section>
+
+			<!--------- FIN -> SECCION 1------------->
+
+			<!-- Fin sección Receta 1 -->
+
+			<!--------- INICIO -> SECCION 2------------->
+
+			<section id="Receta 2">
+
+				<div class="contenedor_02">
+
+					<div class="salada_04">
+
+						<h1>MATAMBRE ARROLLADO</h1>
+
+						<!-- Imagen Receta 2 -->
+						<img src="img/Matambre_Arrollado.jpg" alt="Matambre Arrollado" width="200px" height="auto">
+						<hr>
+
+					</div>
+
+					<div class="salada_05">
+
+						<h2>INGREDIENTES</h2>
+
+						<ul>
+							<li>1 matambre</li>
+							<li>Sal y pimienta</li>
+							<li>5 huevos duros</li>
+							<li>4 zanahorias ralladas</li>
+							<li>2 cucharadas de perejil picado</li>
+							<li>1 cucharada de ajo picado</li>
+							<li>1 cucharada de romero, tomillo y de salvia</li>
+							<li>200 g de queso rallado</li>
+							<li>1 sobrecito de gelatina sin sabor (7 g)</li>
+						</ul>
+						<hr>
+
+					</div>
+
+
+					<div class="salada_06">
+
+						<h2>PREPARACIÓN</h2>
+
+						<ul>
+							<li>
+								<h3>Paso 1</h3>
+								<p>Quitar al matambre el exceso de grasa. Estirarlo (con la grasa hacia arriba).
+									Salpimentar.</p>
+							</li>
+
+							<li>
+								<h3>Paso 2</h3>
+								<p>Colocar el ajo, el queso rallado, la zanahoria, las hierbas. Espolvorear con la
+									gelatina.</p>
+							</li>
+
+							<li>
+								<h3>Paso 3</h3>
+								<P>Colocar los huevos duros en fila.</p>
+							</li>
+
+							<li>
+								<h3>Paso 4</h3>
+								<p>Enrollar con cuidado y atar.</p>
+							</li>
+
+							<li>
+								<h3>Paso 5</h3>
+								<p>Hervir el arrollado en una olla profunda, por 4 horas. Si se desea, saborizar el agua
+									con ajo y laurel. Cuando esté tierno, apagar el fuego y dejarlo que se enfríe en el
+									agua.</p>
+
+							</li>
+
+							<li>
+								<h3>Paso 6</h3>
+								<p>Retirarlo y prensarlo con un peso encima. Cortar en rodajas.</p>
+							</li>
+						</ul>
+						<hr>
+
+
+
+					</div>
+
+				</div>
+
+			</section>
+			<!-- Fin sección Receta 2 -->
+
+			<section id="Receta 3">
+
+				<div class="salada_07">
+
+					<h1>PROVOLETA</h1>
+
+					<!-- Imagen Receta 3 -->
+					<img src="img/Provoleta.jpg" alt="Provoleta" width="200px" height="auto">
+					<hr>
+
+				</div>
+
+				<div class="salada_08">
+
+					<h2>INGREDIENTES</h2>
+
+					<ul>
+						<li>3 cebollas grandes</li>
+						<li>40 g de manteca</li>
+						<li>800 g de queso provolone parrillero</li>
+						<li>Sal y pimienta, a gusto</li>
+					</ul>
+					<hr>
+
+				</div>
+
+				<div class="salada_09">
+
+					<h2>PREPARACIÓN</h2>
+
+					<ul>
+						<li>
+							<h3>Paso 1</h3>
+							<p>Cortar las cebollas en juliana.</p>
+						</li>
+
+						<li>
+							<h3>Paso 2</h3>
+							<p>Llevar al fuego una sartén con la manteca y rehogar la cebolla unos 50 minutos, a fuego
+								muy bajo, hasta que queden totalmente tiernas y dulces.</p>
+						</li>
+
+						<li>
+							<h3>Paso 3</h3>
+							<P>Probar la cebolla y, si hiciera falta, sumar una pizca de azúcar. Subir el fuego y
+								cocinar unos minutos más para que tomen más color. Retirar y reservar.</p>
+						</li>
+
+						<li>
+							<h3>Paso 4</h3>
+							<p>Cortar el queso en 4 rodajas de 200 gramos. Disponerlas en una sartén de hierro del mismo
+								diámetro (provoleteras).</p>
+						</li>
+
+						<li>
+							<h3>Paso 5</h3>
+							<p>Llevarlas a horno precalentado con fuego máximo. En horno de barro o piedra se cocinan en
+								10 minutos. En horno doméstico, al máximo, llevan 15. Hay que cocinarlas hasta que se
+								fundan.</p>
+
+						</li>
+
+						<li>
+							<h3>Paso 6</h3>
+							<p>Retirar la sartén del horno y distribuir encima la cebolla caramelizada. Salpimentar a
+								gusto y servir enseguida en la misma sartén.</p>
+						</li>
+					</ul>
+					<hr>
+
+				</div>
+
+
+			</section>
+			<!-- Fin sección Receta 3 -->
+			<section id="Receta 4">
+
+				<div class="salada_10">
+
+					<h1>LOCRO</h1>
+
+					<!-- Imagen Receta 4 -->
+					<img src="img/Locro.jpg" alt="Locro" width="200px" height="auto">
+					<hr>
+
+				</div>
+
+				<div class="salada_11">
+
+					<h2>INGREDIENTES</h2>
+
+					<ul>
+						<li>300 gr de maíz blanco partido</li>
+						<li>200 gr de poroto pallares blanco</li>
+						<li>200 gr de panceta</li>
+						<li>150 gr de chorizo criollo</li>
+						<li>1/2 chorizo colorado</li>
+						<li>200 gr de pechito de cerdo</li>
+						<li>200 g de falda</li>
+						<li>1 cebolla</li>
+						<li>500 gr de calabaza</li>
+					</ul>
+					<hr>
+
+				</div>
+
+				<div class="salada_12">
+
+					<h2>SALSA PICANTE</h2>
+
+					<ul>
+						<li>100 g de cebolla de verdeo picada</li>
+						<li>1 taza de aceite mezcla</li>
+						<li>Pimentón y ají molido a gusto</li>
+						<li>1/2 taza de agua</li>
+					</ul>
+					<hr>
+
+				</div>
+
+				<div class="salada_13">
+
+					<h2>PREPARACIÓN</h2>
+
+					<ul>
+						<li>
+							<h3>Paso 1</h3>
+							<p>Remojar los porotos pallares y el maíz blanco 24 horas antes de preparar el guiso
+								(guardar en recipiente con agua en heladera).</p>
+						</li>
+
+						<li>
+							<h3>Paso 2</h3>
+							<p>Cortar en cubos todos los ingredientes. </p>
+						</li>
+
+						<li>
+							<h3>Paso 3</h3>
+							<P>Cocinar en una cacerola el maíz junto con los porotos, la calabaza y la cebolla con 2
+								litros de agua.</p>
+						</li>
+
+						<li>
+							<h3>Paso 4</h3>
+							<p>Revolver con cuchara de madera cada 15 minutos.</p>
+						</li>
+
+						<li>
+							<h3>Paso 5</h3>
+							<p>Pasada una hora de cocción sumar las carnes. Revolver.</p>
+
+						</li>
+
+						<li>
+							<h3>Paso 6</h3>
+							<p>La salsa picante. Picar la cebolla de verdeo y verterla en una ollita con el aceite a
+								baja temperatura. La idea es que se cocine lento y no quede crujiente.</p>
+						</li>
+
+						<li>
+							<h3>Paso 7</h3>
+							<p>Añadir 2 cucharadas de pimentón y 2 cucharadas de ají molido a medio vaso de agua y
+								sumarlo al aceite. Mezclar. Cocinar 5 minutos más y retirar.</p>
+						</li>
+
+						<li>
+							<h3>Paso 8</h3>
+							<p>Servir el locro bien caliente en cazuela de barro y la salsa picante en recipiente aparte
+								para incorporar a gusto.</p>
+						</li>
+					</ul>
+					<hr>
+
+				</div>
+
+			</section>
+			<!-- Fin sección Receta 4 -->
+
+			<section id="Receta 5">
+
+				<div class="salada_14">
+
+					<h1>CHIPA GUAZÚ</h1>
+
+					<!-- Imagen Receta 5 -->
+					<img src="img/Chipa_01.jpg" alt="Chipa Guazú" width="200px" height="auto">
+					<hr>
+
+				</div>
+
+				<div class="salada_15">
+
+					<h2>INGREDIENTES</h2>
+
+					<ul>
+						<li>1 kilo de choclo</li>
+						<li>5 huevos</li>
+						<li>1 taza de leche</li>
+						<li>½ taza de manteca</li>
+						<li>2 cebollas</li>
+						<li>300 gramos de queso</li>
+						<li>Sal y pimienta, a gusto</li>
+					</ul>
+					<hr>
+
+				</div>
+
+				<div class="salada_16">
+
+					<h2>PREPARACIÓN</h2>
+
+					<ul>
+						<li>
+							<h3>Paso 1</h3>
+							<p>Pelar y cortar las cebollas en cubitos.</p>
+						</li>
+
+						<li>
+							<h3>Paso 2</h3>
+							<p>En una sartén poner a calentar 3 cucharadas de manteca y agregar la cebolla picada con
+								una pizca de sal y pimienta. Freír hasta transparentar la cebolla.</p>
+						</li>
+
+						<li>
+							<h3>Paso 3</h3>
+							<P>Procesar o licuar el choclo, los huevos, la cebolla salteada, el aceite y la leche.</p>
+						</li>
+
+						<li>
+							<h3>Paso 4</h3>
+							<p>Verter la mezcla en una placa aceitada y sumar el queso desmenuzado. Agregar sal al
+								gusto, y mezclar.</p>
+						</li>
+
+						<li>
+							<h3>Paso 5</h3>
+							<p>Hornear a 180° durante unos 45 minutos.</p>
+						</li>
+					</ul>
+					<hr>
+
+				</div>
+
+
+
+			</section>
+			<!-- Fin sección Receta 5 -->
+
+			<section id="Receta 6">
+
+				<div class="salada_17">
+
+					<h1>ASADO A LA PARRILLA</h1>
+
+					<!-- Imagen Receta 5 -->
+					<img src="img/Asado.jpg" alt="Asado" width="200px" height="auto">
+					<hr>
+
+				</div>
+
+				<div class="salada_18">
+
+					<h2>INGREDIENTES</h2>
+
+					<ul>
+
+						<li>1 y 1/2 kilo de asado de tira</li>
+						<li>Sal y pimienta, a gusto</li>
+
+					</ul>
+					<hr>
+
+				</div>
+
+				<div class="salada_19">
+
+					<h2>PREPARACIÓN</h2>
+
+					<ul>
+						<li>
+							<h3>Paso 1</h3>
+							<p>Encender el fuego para lograr una buena cantidad de brasas, puede ser tanto con carbón
+								como leña.</p>
+						</li>
+
+						<li>
+							<h3>Paso 2</h3>
+							<p>Colocar una buena capa de brasas debajo de la parrilla y calentar los fierros hasta que
+								adquieran temperatura.</p>
+						</li>
+
+						<li>
+							<h3>Paso 3</h3>
+							<P>Salar la carne, al tratarse de un corte pequeño, se puede usar sal fina, sin embargo,
+								siempre lo aconsejable es utilizar sal parrillera, la pimienta es a gusto de cada
+								asador.</p>
+						</li>
+
+						<li>
+							<h3>Paso 4</h3>
+							<p>El tiempo de cocción dependerá del tamaño de la tira, tanto por el corte que haya
+								realizado el carnicero como por el tamaño del hueso, ya que si es un animal chico los
+								huesos serán pequeños, en cambio si es un animal más grande, también lo serán los
+								huesos.</p><br>
+
+							<p>Aproximadamente, se calcula media hora del lado de los huesos, hasta observar que
+								comienzan a brotar pequeñas gotas de sangre del lado de la carne, es un buen momento
+								para dar vuelta la tira.</p><br>
+
+							<p>Una vez esté del lado de la carne solo dorar la misma para que quede crujiente y con
+								color, bastará con unos diez minutos como mucho y estará listo para salir del fuego y
+								reposar unos minutos.</p>
+						</li>
+
+						<li>
+							<h3>Paso 5</h3>
+							<p>Servir y acompañar con papas fritas.</p>
+						</li>
+					</ul>
+					<hr>
+
+				</div>
+
+
+		</div>
+		</section>
+
+		</div>
+
+	</main>
+	<!-- Fin del main -->
+
+	<footer>
+	</footer>
+
+	<script src="./js/index.js"></script>
+
 </html>
